# MuDyno

./: .gitignore  Pipfile  README.md  REPORT_ZH.md  main.py  pyproject.toml
engine/: error_handle.py  field.py  llg.py  solver.py
example/: single_spin_try_run.py  single_spin_try_run_ag.py
